OO-4807: show start time of tests in assessment tool (real time)